# rust-axum-ex1

./: Cargo.toml  README.md
src/: main.rs
tests/: quick_dev.rs
