[package]
name = "rust-axum-ex1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
tokio = {version = "1.29.1", features = ["full"]}

[dev-dependencies]
anyhow = "1.0.72"
httpc-test = "0.1.5"
